Fleshed out favorites

--- a/favorites.html
+++ b/favorites.html
@@ -42,33 +42,272 @@
                         <th>Complete</th>
                     </tr>
                     <tr>
-                        <td>Dune - Frank Herbert<br />
-                        The Passage - Justin Cronin</td>
-                        <td>Landscape Painted With Tea - Milorad Pavic</td>
-                        <td>The Book Thief - Markus Zusak</td>
+                        <td>
+                        The Passage - Justin Cronin
+                        </td>
+                        <td>
+                        Dune - Frank Herbert
+                        </td>
+                        <td>
+                        Landscape Painted With Tea - Milorad Pavic<br />
+                        The Book Thief - Markus Zusak<br />
+                        House of Leaves<br />
+                        Foundation<br />
+                        Foundation and Empire<br />
+                        Second Foundation<br />
+                        Foundation's Edge<br />
+                        Foundation and Earth<br />
+                        Prelude to Foundation<br />
+                        Forward the Foundation<br />
+                        Foundation's Fear<br />
+                        Foundation and Chaos<br />
+                        Foundation's Triumph<br />
+                        The Hitchhiker's Guide To the Galaxy<br />
+                        1984<br />
+                        The Time Machine<br />
+                        Ender's Game<br />
+                        Jane Eyre<br />
+                        The Ocean At the End Of the Lane<br />
+                        Beloved<br />
+                        The Sandman (All Volumes)<br />
+                        American Gods<br />
+                        The Hobbit<br />
+                        Cujo<br />
+                        The Hunger Games<br />
+                        Catching Fire<br />
+                        Mockingjay<br />
+                        Maze Runner<br />
+                        The Scorch Trials<br />
+                        The Death Cure<br />
+                        Percy Jackson and the Olympians: The Lightning Thief<br />
+                        Percy Jackson: The Sea Of Monsters<br />
+                        Percy Jackson: The Titan's Curse<br />
+                        Percy Jackson: The Battle of the Labyrinth<br />
+                        Percy Jackson: The Last Olympian<br/>
+                        The Heroes of Olympus: The Lost Hero<br />
+                        The Heroes of Olympus: The Son of Neptune<br />
+                        The Heroes of Olympus: The Mark of Athena<br />
+                        The Heroes of Olympus: The House of Hades<br />
+                        The Heroes of Olympus: The Blood of Olympus<br />
+                        The Kane Chronicles: The Red Pyramid<br />
+                        The Kane Chronicles: The Serpent's Shadow<br />
+                        The Kane Chronicles: The Throne of FIre<br />
+                        Magnus Chase<br />
+                        </td>
                     </tr>
                 </table>
             </div>
             <div>
                 <h1>Watching</h1>
                 <h2>Movies</h2>
-                <p>Under construction</p>
+                <table>
+                    <tr>
+                        <th>Ready</th>
+                        <th>Work in Progress</th>
+                        <th>Complete</th>
+                    </tr>
+                    <tr>
+                        <td>
+                        </td>
+                        <td></td>
+                        <td>
+                        Extinction<br />
+                        The Green Inferno<br />
+                        Inception<br />
+                        Eternals<br />
+                        Parasite<br />
+                        Children of the Corn<br />
+                        Alien<br />
+                        Aliens<br />
+                        IO<br />
+                        Avengers: Endgame<br />
+                        Avengers: Infinity War<br />
+                        Captain Marvel<br />
+                        Black Panther<br />
+                        Thor: Ragnarok<br />
+                        Doctor Strange<br />
+                        Avengers: Civil War<br />
+                        Guardians of the Galaxy Vol. 2<br />
+                        Guardians of the Galaxy<br />
+                        Avengers: Age of Ultron<br />
+                        Ant-man<br />
+                        Ant-man and Wasp<br />
+                        Captain America: The Winter Soldier<br />
+                        Avengers<br />
+                        Iron Man 3<br />
+                        Iron Man 2<br />
+                        Iron Man<br />
+                        Captain America<br />
+                        Thor: The Dark World<br />
+                        The Incredible Hulk<br />
+                        Thor<br />
+                        Star Wars: Episode IX - The Rise of Skywalker<br />
+                        Star Wars: Episode VIII - The Last Jedi<br />
+                        Star Wars: Episode VII - The Force Awakens<br />
+                        Star Wars: Episode VI - Return of the Jedi<br />
+                        Star Wars: Episode V - The Empire Strikes Back
+                        Star Wars: Episode IV - A New Hope<br />
+                        Star Wars: Episode III - Revenge of the Sith<br />
+                        Star Wars: Episode II - Attack of the Clones<br />
+                        Star Wars: Episode I - The Phantom Menace<br />
+                        Harry Potter and the Sorcerer's Stone<br />
+                        Harry Potter and the Chamber Of Secrets<br />
+                        Harry Potter and the Prisoner Of Azkaban<br />
+                        Harry Potter and the Goblet Of Fire<br />
+                        Harry Potter and the Order Of the Phoenix<br />
+                        Harry Potter and the Halfblood Prince<br />
+                        Harry Potter and the Deathly Hallows: Part 1<br />
+                        Harry Potter and the Deathly Hallows: Part 2<br />
+                        Saw<br />
+                        Saw II<br />
+                        Saw III<br />
+                        Saw IV<br />
+                        Saw V<br />
+                        Saw VI<br />
+                        Saw: The Final Chapter<br/>
+                        The Blaire Witch Project<br />
+                        Ghostbusters<br />
+                        Texas Chainsaw Massacre<br />
+                        Nightmare on Elm Street<br />
+                        Halloween<br />
+                        The Silence Of the Lambs<br />
+                        The Shining<br />
+                        The Hunger Games<br />
+                        Hunger Games: Catching Fire<br />
+                        Maze Runner<br />
+                        The Lightning Thief<br />
+                        </td>
+                    </tr>
+                </table>
                 <h2>TV Shows</h2>
-                <p>Under construction</p>
+                <table>
+                    <tr>
+                        <th>Ready</th>
+                        <th>Work in Progress</th>
+                        <th>Complete</th>
+                        <th>Cancelled</th>
+                    </tr>
+                    <tr>
+                        <td>
+                        The Mandalorian<br />
+                        </td>
+                        <td>
+                        The Good Place<br />
+                        Squid Game<br />
+                        Attack on Titan<br />
+                        Grey's Anatomy<br />
+                        Alien Worlds<br />
+                        </td>
+                        <td>
+                        Orange Is the New Black<br />
+                        Russian Doll<br />
+                        How To Get Away With Murder<br />
+                        Clickbait<br />
+                        Neon Genesis: Evangelion<br />
+                        American Horror Story<br />
+                        Avatar: The Last Airbender<br />
+                        The Legend of Korra<br />
+                        </td>
+                        <td>
+                        The 100<br />
+                        Doctor Who<br />
+                        Spongebob Squarepants
+                        </td>
+                    </tr>
+                </table>
                 <h2>YouTube Shows/Channels</h2>
-                <p>Under construction</p>
+                <table>
+                    <tr>
+                        <th>Ready</th>
+                        <th>Work in Progress</th>
+                        <th>Complete</th>
+                    </tr>
+                    <tr>
+                        <td>
+                        </td>
+                        <td>
+                        Game Grumps<br />
+                        grayfruit<br />
+                        Wendigo<br />
+                        jacksfilms<br />
+                        Burback<br />
+                        anthpo<br />
+                        Thrillseeker<br />
+                        Ted Nivison<br />
+                        Gus Johnson<br />
+                        Eddy Burback<br />
+                        Sven Johnson<br />
+                        Ghost Town Living<br />
+                        </td>
+                        <td>
+                        Unus Annus<br />
+                        Vsauce<br />
+                        Markiplier<br />
+                        Tobuscus<br />
+                        </td>
+                    </tr>
+                </table>
             </div>
             <div>
                 <h1>Experiencing</h1>
                 <h2>Games</h2>
-                <p>Under Construction</p>
+                <table>
+                    <tr>
+                        <th>Ready</th>
+                        <th>Work in Progress</th>
+                        <th>Complete</th>
+                    </tr>
+                    <tr>
+                        <td>
+                        Control<br />
+                        Half Life: Alyx<br />
+                        </td>
+                        <td>
+                        Mass Effect 2<br />
+                        Beat Saber<br />
+                        Jet Island<br />
+                        Hidden People<br />
+                        </td>
+                        <td>
+                        Dark Souls<br />
+                        Earthbound<br />
+                        Hollow Knight<br />
+                        Death Stranding<br />
+                        Dead Space 2<br />
+                        Star Wars: Fallen Order<br />
+                        Portal 2<br />
+                        Lego Star Wars<br />
+                        </td>
+                    </tr>
+                </table>
                 <p><a href="https://pcrowe22.github.io/Bibliotech/binary2.0.html">Psst, I built a "game"!</a></p>
                 <p>It's only partially complete, but I think it's functional enough to call it a puzzle game. I used Javascirpt to make it.</p>
             </div>
             <div>
                 <h1>Listening</h1>
                 <h2>Podcasts</h2>
-                <p>Under construction</p>
+                <table>
+                    <tr>
+                        <th>Ready</th>
+                        <th>Work in Progress</th>
+                        <th>Complete</th>
+                        <th>Cancelled</th>
+                    </tr>
+                    <tr>
+                        <td>
+                        Erin Is the Funny One<br />
+                        </td>
+                        <td>
+                        Chuckle Sandwich<br />
+                        The Gus and Eddy Podcast<br />
+                        </td>
+                        <td>
+                        </td>
+                        <td>
+                        Welcome to Night Vale
+                        </td>
+                    </tr>
+                </table>
                 <h2>Music</h2>
                 <p>Under construction</p>
             </div>
