--- a/favorites.html
+++ b/favorites.html
@@ -165,7 +165,7 @@
                         Saw V<br />
                         Saw VI<br />
                         Saw: The Final Chapter<br/>
-                        The Blaire Witch Project<br />
+                        The Blair Witch Project<br />
                         Ghostbusters<br />
                         Texas Chainsaw Massacre<br />
                         Nightmare on Elm Street<br />
